fix: location+level filters, resumeVersion display, updateStatus error propagation, Java 17 thread